# prompt-mask

./: .envrc  .gitignore  LICENSE  README.md  add-coffee.sh  commit-02.sh  commit-04.sh  commit-05.sh  fix-readme-cli.sh  pyproject.toml
app/: index.html
src/prompt_mask/: __init__.py  cli.py  detector.py  engine.py  storage.py
tests/: test_prompt_mask.py
