[project]
name = "prompt-mask"
version = "0.1.0"
description = "Anonymize your prompts before sending them to AI. 100% local."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "cloudspawn" }]
keywords = ["privacy", "anonymization", "prompt", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cloudspawn/prompt-mask"
Repository = "https://github.com/cloudspawn/prompt-mask"

[project.scripts]
prompt-mask = "prompt_mask.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_mask"]
