[project]
name = "prompt-mask"
version = "0.1.0"
description = "Anonymize your prompts before sending them to AI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["privacy", "anonymize", "ai", "prompt", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
prompt-mask = "prompt_mask.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_mask"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
